# SmartKnob

./: README.md
3D models/SmartKnob/: SmartKnob.blend  SmartKnob.blend1  SmartKnob_design.blend
firmware/: CMakeLists.txt  Settings.c  Settings.h  SmartKnob.c  banked_custom.ld  boot_button.h  modes.h  pindefs.h  tusb_config.h  usb.h  usb_descriptors.c  utils.h
firmware/GC9A01/: CMakeLists.txt  GC9A01.c  GC9A01.h  GC9A01.pio  GC9A01_helpers.h  commands.h  draw_functions.h  font16.h  frame_gen.c  frametype.h  img.vec
firmware/GC9A01/images/: brightness_img.h  clap_img.h  cool_s.h  crosshair.h  cursor32.h  cursor_image.h  hihat_img.h  joystick_img.h  kick_img.h  ledring.h  mouse_img.h  power_img.h  smartknob_image.h  snare_img.h  start_app_img.h  vinyl_img.h
firmware/HX711/: CMakeLists.txt  HX711.c  HX711.h  HX711.pio
firmware/MT6701/: CMakeLists.txt  MT6701.c  MT6701.h  spi_read.pio
firmware/Motor/: CMakeLists.txt  Motor.c  Motor.h
firmware/WS2812/: CMakeLists.txt  WS2812.c  WS2812.h  WS2812.pio
firmware/usb/: CMakeLists.txt  tusb_config.h  usb.h  usb_descriptors.c  usb_descriptors.h
test_app/: Assembly-CSharp.csproj  Message.cs  NuGetForUnity.csproj  Presser.cs  Smart Knob ANgle.sln  Test_example_1.cs  Unity.CollabProxy.Editor.csproj  Unity.InputSystem.csproj  Unity.PlasticSCM.Editor.csproj  Unity.Rider.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  Unity.Timeline.Editor.csproj  Unity.Timeline.csproj  Unity.VSCode.Editor.csproj  Unity.VisualStudio.Editor.csproj  UnityEditor.TestRunner.csproj  UnityEditor.UI.csproj  UnityEngine.TestRunner.csproj  UnityEngine.UI.csproj
test_app/Assets/: Detent.cs  Message.cs  Test_example_1.cs  grey.mat  mixer.mixer  packages.config  rotate.inputactions
test_app/Assets/Scenes/: SampleScene.unity
test_app/Logs/: ApiUpdaterCheck.txt
test_app/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
utilities/: bmp_to_16bit_array.c
